01Oct01=======================================================================
1. made login info not the default
2. change the looping protoection for PC16/17/19/21 and also be more rigorous
in who we accept which PC16/17/21's from.
3. fix MAJOR disconnect bug introduced accidentally in the NP work.
30Sep01=======================================================================
1. made some small bug fixes in rspf checking and also messages. 
23Sep01=======================================================================
1. I have incorporated Steve's (K9AN) lastest sh/sun and sh/moon stuff which
copes much better with some of the end effects that occur in these calc-
ulations. You can now also see up to a year into the past or future. The 
results compare favourably with the US Naval Obs (unlike certain other
software's output which "I would not want to use their results to aim my 
moon rocket..."). It also fixes some ambiguity about which day the results
are actually for.
21Sep01=======================================================================
1. fix set/lockout so that it is possible to lock out all SSIDs except those
specifically unlocked and so that you don't need to lock the non-SSID call in
order to lock an SSID call. So set/lock g1tlh will lock out all instances of
g1tlh, g1tlh-1, g1tlh-15 etc except (for instance) unset/lock g1tlh-9.
2. show/lock allows partial callsign matching so sh/lock gb7 will only show
GB7* calls that are locked.
3. Had a grand shift around for the start of NP.
19Sep01=======================================================================
1. put in some rudimentory rsfp checking for various things
2. tried to do some fixes on console.pl - YOU WILL REQUIRE Curses 1.06 from
CPAN (perl -MCPAN -eshell, then at cpan> install Curses). 
17Sep01=======================================================================
1. Fixed help and apropos commands so that they default to english if