@@ -3,6 +3,8 @@
 2. change the looping protoection for PC16/17/19/21 and also be more rigorous
 in who we accept which PC16/17/21's from.
 3. fix MAJOR disconnect bug introduced accidentally in the NP work.
+4. Try each badword with an S on the end as well and also check for 'f.u   c'
+type things as well (this only works for a few wellknown english ones).
 30Sep01=======================================================================
 1. made some small bug fixes in rspf checking and also messages. 
 23Sep01=======================================================================
